bindings/lisp/fae/fae.lisp

(in-package :cl-user)
(defcfun (fae-version "fae_fae_version") list)
(defcfun (fae-version-string "fae_fae_version_string") string)
(defcfun (fae-initialize "fae_fae_initialize") :void)
(defcfun (fae-terminate "fae_fae_terminate") :void)
(defctype fae-log-func (:pointer (:pointer :void)))
(defcfun (fae-set-log-file "fae_fae_set_log_file") :void (a string-file-path))
(defcfun (fae-set-log-std "fae_fae_set_log_std") :void)
(defcfun (fae-set-log "fae_fae_set_log") :void (a fae-log-func) (b ptr))
(defcfun (fae-log "fae_fae_log") :void (a ptr) (b error))
(defcfun (fae-log-info "fae_fae_log_info") :void (a string))
(defcfun (fae-log-warning "fae_fae_log_warning") :void (a string))
(defcfun (fae-log-error "fae_fae_log_error") :void (a string))
(defcfun (fae-log-info-from "fae_fae_log_info_from") :void (a string) (b string))
(defcfun (fae-log-warning-from "fae_fae_log_warning_from") :void (a string) (b string))
(defcfun (fae-log-error-from "fae_fae_log_error_from") :void (a string) (b string))
(defcfun (fae-dlog "fae_fae_dlog") :void (a ptr) (b error))
(defcfun (fae-dlog-info "fae_fae_dlog_info") :void (a string))